[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 58.7335

[node name="Player" type="Area2D"]
script = ExtResource( 2 )
bullet_prefab = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
